objects/Partner_User_Quiz_Scores__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner User Quiz Scores</relationshipLabel>
        <relationshipName>Partner_User_Quiz_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Used__c</fullName>
        <label>Email Used</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ProProfs_Message__c</fullName>
        <label>ProProfs Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Partner User Quiz Score</label>
    <nameField>
        <displayFormat>PUQS-{000000000}</displayFormat>
        <label>Partner User Quiz Scores Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner User Quiz Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>